# actions

./: .editorconfig  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  ci_command_usage.md  fake_script.py  pyproject.toml  script.py  shame.yml  test_code.py
.claude-plugin/: marketplace.json
.github/workflows/: checkout-ref.yml  ci.yaml  claude_mention.yaml  claude_review.yaml  claude_review_2.yaml  lint.yaml  test-bump-app.yaml  test-checkout.yml  test-claude_mention.yaml  test-claude_review.yaml  test-command.yaml  test-docker.yaml  test-mise.yaml  test-python.yaml  test-slack.yaml  test-uv.yaml  test_bump.yml  test_publish.yml
claude-code-plugins/code-review/: README.md
claude-code-plugins/code-review/agents/: code-review.md  cowsay.md  false-positive-review.md
claude-code-plugins/code-review/commands/: test-prompt.md  test-review-prompt.md
claude-code-plugins/code-review/skills/gh-comment-client/: SKILL.md
claude-code-plugins/code-review/skills/gh-comment-client/scripts/: fetch_claude_summary.py  list_comment_threads.py
examples/: claude_mention.yaml  claude_review.yaml
fake_uv/: hello.py  pyproject.toml
scripts/: uptick_github.py  uptick_slack.py
